CLDR-4421 fix wrapping of errored items
X-SVN-Rev: 6746

--- a/tools/cldr-apps/WebContent/surveytool.css
+++ b/tools/cldr-apps/WebContent/surveytool.css
@@ -1626,7 +1626,8 @@ body.disconnected div#progress button#progress-refresh {
 	background: url(vote.png) no-repeat center center;
 }
 
-td.d-change {
+td.d-change,
+td.d-change-err {
 	white-space: nowrap;
 }
 
